-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11.0.9, 15, 16
-
Component/s: hotspot
-
b07
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8251334 | 15.0.2 | Roman Kennke | P4 | Resolved | Fixed | b01 |
| JDK-8251427 | 15.0.1 | Roman Kennke | P4 | Resolved | Fixed | b05 |
| JDK-8251225 | 11.0.9 | Roman Kennke | P4 | Resolved | Fixed | b03 |
Shenandoah is not clearing soft-refs on a requested (by System.gc() or implicitely) GC. We should do that. It is breaking java/util/logging/Logger/bundleLeak/BundleTest.java that exects soft-refs to evevtually be cleared by System.gc().
- backported by
-
JDK-8251225 Shenandoah: Clear soft-refs on requested GC cycle
-
- Resolved
-
-
JDK-8251334 Shenandoah: Clear soft-refs on requested GC cycle
-
- Resolved
-
-
JDK-8251427 Shenandoah: Clear soft-refs on requested GC cycle
-
- Resolved
-