8249801: Shenandoah: Clear soft-refs on requested GC cycle

Reviewed-by: shade